Add defensive copying for mutable properties, enhance null checks, and introduce `ProfileJpaRepository`
Introduce defensive copying for mutable configurations across services, controllers, and validators to prevent external modification. Add null checks to critical constructors for robust parameter validation. Extract `ProfileJpaRepository` interface for `JpaProfileRepository` to improve maintainability and separation of concerns. Improve handling and logging of API keys in `OpenAIImageGenerationService`. Minor refactoring and JavaDoc updates across various components.